--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <version>${org.junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite</artifactId>
+            <version>${org.junit.platform.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -49,6 +55,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <org.junit.jupiter.version>5.8.2</org.junit.jupiter.version>
+        <org.junit.platform.version>1.8.2</org.junit.platform.version>
     </properties>
 
 </project>
