--- a/pom.xml
+++ b/pom.xml
@@ -45,11 +45,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12.4</version>
+                <version>3.0.0-M5:test</version>
             </plugin>
         </plugins>
-        
-        <testSourceDirectory>src/test/java</testSourceDirectory>
+
+        <testSourceDirectory>src/test</testSourceDirectory>
     </build>
 
 
